--- a/pom.xml
+++ b/pom.xml
@@ -147,9 +147,8 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18</version>
 				<configuration>
-					<forkCount>1</forkCount>
 					<includes>
-					<include>net.thucydides.showcase.cucumber.AdmissaoTeste.java</include>
+					<include>net.thucydides.showcase.cucumber.*</include>
 					</includes>
 				</configuration>
 			</plugin>
